objects/vlocity_cmt__OrchestrationScenario__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                    <default>true</default>
                    <label>Add</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanDefinitionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Scenarios</relationshipLabel>
        <relationshipName>OrchestrationScenarios</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orchestration Scenarios</relationshipLabel>
        <relationshipName>OrchestrationScenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <label>Sub Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move-Add</fullName>
                </value>
                <value>
                    <fullName>Move-Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orchestration Scenario</label>
    <nameField>
        <label>Orchestration Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>